--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,9 @@ div {
   padding: 50px;
   margin: 20px;
 }
-img  {
-  float: right;
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
