--- a/css/styles.css
+++ b/css/styles.css
@@ -24,3 +24,9 @@ div {
   margin-right: auto;
   width: 50%;
 }
+.crazy {
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
