--- a/css/styles.css
+++ b/css/styles.css
@@ -30,5 +30,11 @@ div {
   border: 3px solid green;
   padding: 10px;
 }
-h1 {text-align: center;}
-h2 {text-align: center;}
+h1 {
+  text-align: center;
+}
+h2 {text-align: center;
+}
+img  {
+  float: right;
+}
